--- a/desafios/d002.md
+++ b/desafios/d002.md
@@ -5,7 +5,8 @@
 Crie um programa, que irá perguntar ao usuário seu nome, e em seguida irá imprimir na tela com uma saudação, exemplo:
 
 ```txt
-Qual é o seu nome? // Usuário digitou "João"
+Qual é o seu nome? 
+>> Usuário digitou "João"
 É um prazer em conhece-lo, João!
 ```
 
