--- a/desafios/d003.md
+++ b/desafios/d003.md
@@ -8,8 +8,10 @@ Desenvolva um programa que:
 
 Exemplo:
 ```txt
-Qual é o seu nome?  // Usuário(a) digitou "Ana"
-Qual é a sua idade? // Usuário(a) digitou "25"
+Qual é o seu nome?  
+>> Usuário(a) digitou "Ana"
+Qual é a sua idade? 
+>> Usuário(a) digitou "25"
 Olá, Ana! Você tem 25 anos. É ótimo conhecer você!
 ```
 
